--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
                 <form>
                     <!-- Email input -->
                     <div class="form-outline mb-4">
-                      <input type="email" id="form2Example1" class="form-control" [(ngModel)]="user.username" name="username"/>
+                      <input type="email" id="form2Example1" class="form-control" [(ngModel)]="user.email" name="username"/>
                       <label class="form-label" for="form2Example1">Email address</label>
                     </div>
                   
