--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,76 @@
 </div>
 
 <div *ngIf="IsAuthenticated">
-    ESTAS AUTENTICADO!!!!!! {{user.username}}
+
+    
+
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasDarkLabel">
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasRightLabel">CHAT</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close" style="background-color: white;"></button>
+      </div>
+      <div class="offcanvas-body">
+         AQUI VAN LOS USERS ONLINE
+      </div>
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-7 offset-lg-1 col-md-7 offset-md-1 col-sm-7 offset-sm-1">
+
+                <div class="col-lg-12 col-md-12 col-sm-12 mt-3">
+                    <div class="card">
+                        
+                        <div class="card-body">
+                          <h5 class="card-title">Sunset</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+                          <p class="card-text"><small class="text-muted"><i class="fas fa-eye"></i>1000<i class="far fa-user"></i>admin<i class="fas fa-calendar-alt"></i>Jan 20, 2018</small></p>
+                         <a href="" class="btn btn-outline-success btn-sm">Read More</a>
+                          <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                        </div>
+                       </div>
+                </div>
+    
+                <div class="col-lg-12 col-md-12 col-sm-12 mt-3">
+                    <div class="card">
+                        <img src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60" alt="" class="card-img-top">
+                        <div class="card-body">
+                          <h5 class="card-title">Sunset</h5>
+                          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+                          <p class="card-text"><small class="text-muted"><i class="fas fa-eye"></i>1000<i class="far fa-user"></i>admin<i class="fas fa-calendar-alt"></i>Jan 20, 2018</small></p>
+                         <a href="" class="btn btn-outline-success btn-sm">Read More</a>
+                          <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                        </div>
+                       </div>
+                </div>
+
+            </div>
+
+            <div class="col-lg-3 col-md-3 col-sm-3">
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <div class="card mt-3" style="width: 18rem;">
+                        <div class="card-body">
+                          <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-eye"></i>&nbsp; Followers 450</h1> 
+                          <hr>  
+                          <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-users"></i>&nbsp; Following 1322</h1> 
+                          <hr>                         
+                        </div>
+                      </div>
+                </div>  
+
+
+
+                <div class="col-lg-12 col-md-12 col-sm-12">
+                    <button class="btn btn-info mt-3" type="button" id="buttonChat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Chat <i class="fa-solid fa-arrow-right"></i></button>
+                </div>               
+            </div>
+            
+            
+            
+           
+        </div>
+    </div>
 </div>
 
 
