--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -25,11 +25,33 @@
                     <div class="card">
                         
                         <div class="card-body">
-                          <h5 class="card-title">Sunset</h5>
-                          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
-                          <p class="card-text"><small class="text-muted"><i class="fas fa-eye"></i>1000<i class="far fa-user"></i>admin<i class="fas fa-calendar-alt"></i>Jan 20, 2018</small></p>
-                         <a href="" class="btn btn-outline-success btn-sm">Read More</a>
-                          <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                            <img
+                            src="../../../assets/img/perfilH.png"
+                            class="rounded-circle mb-2"
+                            height="50"
+                            alt="Black and White Portrait of a Man"
+                            loading="lazy"
+                          /> 
+                          
+                          <textarea class="form-control mb-2" id="textPublish" rows="1" placeholder="What do you want to publish?"></textarea>
+                          <div id="publishButton">
+                            <button type="button" class="btn btn-info">Add Picture</button>
+                            <button type="button" class="btn btn-success ms-1">Publish</button>
+                          </div>
+                          
+                        </div>
+                       </div>
+                </div>
+
+                <div class="col-lg-12 col-md-12 col-sm-12 mt-3">
+                    <div class="card">
+                        
+                        <div class="card-body">
+                            <h5 class="card-title">Sunset</h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+                            <p class="card-text start-0"><small class="text-muted"><i class="fas fa-eye"></i>1000<i class="far fa-user"></i>admin<i class="fas fa-calendar-alt"></i>Jan 20, 2018</small></p>
+                            <a href="" class="btn btn-outline-success btn-sm">Comment</a>
+                            <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>                                                                                                                                                                        
                         </div>
                        </div>
                 </div>
@@ -41,7 +63,7 @@
                           <h5 class="card-title">Sunset</h5>
                           <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
                           <p class="card-text"><small class="text-muted"><i class="fas fa-eye"></i>1000<i class="far fa-user"></i>admin<i class="fas fa-calendar-alt"></i>Jan 20, 2018</small></p>
-                         <a href="" class="btn btn-outline-success btn-sm">Read More</a>
+                         <a href="" class="btn btn-outline-success btn-sm">Comment</a>
                           <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
                         </div>
                        </div>
@@ -64,7 +86,7 @@
 
 
                 <div class="col-lg-12 col-md-12 col-sm-12">
-                    <button class="btn btn-info mt-3" type="button" id="buttonChat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Chat <i class="fa-solid fa-arrow-right"></i></button>
+                    <button class="btn btn-primary mt-3" type="button" id="buttonChat" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Chat <i class="fa-solid fa-arrow-right"></i></button>
                 </div>               
             </div>
             
