--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -66,7 +66,7 @@
               />        
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">
+              <li><a class="dropdown-item" [routerLink]="['myprofile']">
                 <i class="fa-solid fa-user"></i> &nbsp; Profile
               </a></li>
               <li><a class="dropdown-item" href="#">
