trabajando en myprofile

--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -1,1 +1,59 @@
-<p>my-profile works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-4">
+            <div class="card mt-3" style="width: 18rem;">
+                <div class="card-body">
+                    <img src="../../../assets/img/perfilH.png" class="img-fluid img-thumbnail" alt="..." id="myProfPict">   
+                    <button type="button" class="btn btn-success ms-1 w-100 mt-2">Change Picture</button>                                   
+                </div>
+              </div>
+
+              <div class="card mt-1" style="width: 18rem;">
+                <div class="card-body">
+                    <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-eye"></i>&nbsp; Followers 450</h1> 
+                    <hr>  
+                    <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-users"></i>&nbsp; Following 1322</h1> 
+                    <hr>                                 
+                </div>
+              </div>
+                
+        </div>
+
+        <div class="col-lg-8 col-md-8 col-sm-8">
+            <div class="card mt-3">                        
+                <div class="card-body">
+                    <h5 class="card-title">Sunset</h5>
+                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+                    <p class="card-text start-0"><small class="text-muted"><i class="fas fa-eye"></i>1000<i class="far fa-user"></i>admin<i class="fas fa-calendar-alt"></i>Jan 20, 2018</small></p>
+                    <a href="" class="btn btn-outline-success btn-sm">Comment</a>
+                    <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>                                                                                                                                                                        
+                </div>
+               </div>
+
+               <div class="card mt-3">
+                <img src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60" alt="" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title">Sunset</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+                  <p class="card-text"><small class="text-muted"><i class="fas fa-eye"></i>1000<i class="far fa-user"></i>admin<i class="fas fa-calendar-alt"></i>Jan 20, 2018</small></p>
+                 <a href="" class="btn btn-outline-success btn-sm">Comment</a>
+                  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                </div>
+               </div>
+
+               <div class="card mt-3">
+                <img src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60" alt="" class="card-img-top">
+                <div class="card-body">
+                  <h5 class="card-title">Sunset</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut eum similique repellat a laborum, rerum voluptates ipsam eos quo tempore iusto dolore modi dolorum in pariatur. Incidunt repellendus praesentium quae!</p>
+                  <p class="card-text"><small class="text-muted"><i class="fas fa-eye"></i>1000<i class="far fa-user"></i>admin<i class="fas fa-calendar-alt"></i>Jan 20, 2018</small></p>
+                 <a href="" class="btn btn-outline-success btn-sm">Comment</a>
+                  <a href="" class="btn btn-outline-danger btn-sm"><i class="far fa-heart"></i></a>
+                </div>
+               </div>
+        </div>
+    </div>
+</div>
+
+
+                          
