--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -3,8 +3,12 @@
         <div class="col-lg-4 col-md-4 col-sm-4">
             <div class="card mt-3" style="width: 18rem;">
                 <div class="card-body">
-                    <img src="../../../assets/img/perfilH.png" class="img-fluid img-thumbnail" alt="..." id="myProfPict">   
-                    <button type="button" class="btn btn-success ms-1 w-100 mt-2">Change Picture</button>                                   
+                    <img src={{url}} class="img-fluid img-thumbnail" alt="..." id="myProfPict">   
+                     
+                    <input type="file" class="btn btn-success ms-1 w-100 mt-2" (change)="handleFileInput($event)" accept=".jpg" requiredFileType="image/png"> 
+                    <button type="button" class="btn btn-success ms-1 w-100 mt-2">Change Picture</button> 
+                    
+                    
                 </div>
               </div>
 
