--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,6 +1,6 @@
 
 <div class="container h-100 mb-4 mt-4">
-    <div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100 mb-4">
     <div class="col-lg-12 col-xl-11">
         <div class="card text-black" style="border-radius: 25px;">
         <div class="card-body p-md-5">
@@ -9,62 +9,64 @@
 
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
+<form>
+    <div class="d-flex flex-row align-items-center mb-4">
+        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+        <input type="text" id="form3Example1c" class="form-control" [(ngModel)]="user.username" name="username"/>
+        <label class="form-label" for="form3Example1c">Your Name</label>
+        </div>
+    </div>
+
+    <div class="d-flex flex-row align-items-center mb-4">
+        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+        <input type="email" id="form3Example3c" class="form-control" [(ngModel)]="user.email" name="email"/>
+        <label class="form-label" for="form3Example3c">Your Email</label>
+        </div>
+    </div>
+
+    <div class="d-flex flex-row align-items-center mb-4">
+        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+        <input type="password" id="form3Example4c" class="form-control" [(ngModel)]="user.password" name="password"/>
+        <label class="form-label" for="form3Example4c">Password</label>
+        </div>
+    </div>
+
+    <div class="d-flex flex-row align-items-center mb-4">                   
+        <i class="fas fa-input-numeric fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+            <input type="number" id="tentacles" name="tentacles" min="18" max="120" [(ngModel)]="user.edad" name="edad">
+        <label class="form-label" for="form3Example4cd" style="margin-left: 5px;">Edad</label>
+        </div>
+    </div>
+
+    <div class="d-flex flex-row align-items-center mb-4">                   
+        <i class="fas fa-input-numeric fa-lg me-3 fa-fw"></i>
+        <div class="form-outline flex-fill mb-0">
+        <select class="form-select" aria-label="Default select example" name="sexo" [(ngModel)]="user.sexo" name="sexo">
+            <option value="Masculino">Masculino</option>
+            <option value="Femenino">Femenino</option>
+        </select>
+        <label class="form-label" for="form3Example4cd" style="margin-left: 5px;">Sexo</label>
+        </div>
+    </div>
 
 
-                <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                    <input type="text" id="form3Example1c" class="form-control" [(ngModel)]="user.username" name="username"/>
-                    <label class="form-label" for="form3Example1c">Your Name</label>
-                    </div>
-                </div>
+    <div class="form-check d-flex justify-content-center mb-5">
+        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
+        <label class="form-check-label" for="form2Example3">
+        I agree all statements in <a href="#!">Terms of service</a>
+        </label>
+    </div>
 
-                <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                    <input type="email" id="form3Example3c" class="form-control" [(ngModel)]="user.email" name="email"/>
-                    <label class="form-label" for="form3Example3c">Your Email</label>
-                    </div>
-                </div>
+    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+        <button type="button" class="btn btn-primary btn-lg" (click)="register()">Register</button>
+    </div>
+</form>
 
-                <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                    <input type="password" id="form3Example4c" class="form-control" [(ngModel)]="user.password" name="password"/>
-                    <label class="form-label" for="form3Example4c">Password</label>
-                    </div>
-                </div>
-
-                <div class="d-flex flex-row align-items-center mb-4">                   
-                    <i class="fas fa-input-numeric fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                        <input type="number" id="tentacles" name="tentacles" min="18" max="120" [(ngModel)]="user.edad" name="edad">
-                    <label class="form-label" for="form3Example4cd" style="margin-left: 5px;">Edad</label>
-                    </div>
-                </div>
-
-                <div class="d-flex flex-row align-items-center mb-4">                   
-                    <i class="fas fa-input-numeric fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                    <select class="form-select" aria-label="Default select example" name="sexo" [(ngModel)]="user.sexo" name="sexo">
-                        <option value="Masculino">Masculino</option>
-                        <option value="Femenino">Femenino</option>
-                    </select>
-                    <label class="form-label" for="form3Example4cd" style="margin-left: 5px;">Sexo</label>
-                    </div>
-                </div>
-
-
-                <div class="form-check d-flex justify-content-center mb-5">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3c" />
-                    <label class="form-check-label" for="form2Example3">
-                    I agree all statements in <a href="#!">Terms of service</a>
-                    </label>
-                </div>
-
-                <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="button" class="btn btn-primary btn-lg" (click)="register()">Register</button>
-                </div>
+                
 
 
 
