--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -1,19 +1,33 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4">
+
+
+         
             <div class="card mt-3" style="width: 18rem;">
                 <div class="card-body">
-                    <img src={{url}} class="img-fluid img-thumbnail" alt="..." id="myProfPict">   
+                    <img [src]="image" class="img-fluid img-thumbnail" alt="..." id="myProfPict" *ngIf="!url"> 
+                    <img src="../../../assets/img/perfilH.png" class="img-fluid img-thumbnail" alt="..." id="myProfPict" *ngIf="url && user.sexo === 'Masculino'">
+                    <img src="../../../assets/img/perfilM.png" class="img-fluid img-thumbnail" alt="..." id="myProfPict" *ngIf="url && user.sexo === 'Femenino'">
                      
                     <input type="file" class="btn btn-success ms-1 w-100 mt-2" (change)="handleFileInput($event)" accept=".jpg" requiredFileType="image/png"> 
-                    <button type="button" class="btn btn-success ms-1 w-100 mt-2">Change Picture</button> 
                     
-                    
+                    <div class="file-select" id="src-file1" >
+                      <input type="file" name="src-file1" aria-label="Archivo" class="btn btn-success ms-1 w-100 mt-2" (change)="handleFileInput($event)" accept=".jpg" requiredFileType="image/png">
+                    </div>
                 </div>
               </div>
 
               <div class="card mt-1" style="width: 18rem;">
                 <div class="card-body">
+                  <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-user"></i>&nbsp;Username: {{user.username}}</h1> 
+                <hr>  
+                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-envelope"></i> &nbsp;{{user.email}}</h1> 
+                <hr> 
+                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-venus-mars"></i> &nbsp;Gender: {{user.sexo}}</h1> 
+                <hr> 
+                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-person-cane"></i>&nbsp;Edad: {{user.edad}}</h1> 
+                <hr>      
                     <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-eye"></i>&nbsp; Followers 450</h1> 
                     <hr>  
                     <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-users"></i>&nbsp; Following 1322</h1> 
