--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-row align-items-center mb-4">                   
         <i class="fas fa-input-numeric fa-lg me-3 fa-fw"></i>
         <div class="form-outline flex-fill mb-0">
-        <select class="form-select" aria-label="Default select example" name="sexo" [(ngModel)]="user.sexo" name="sexo">
+        <select class="form-select" aria-label="Default select example" name="sexo" [(ngModel)]="sexo" name="sexo">
             <option value="Masculino">Masculino</option>
             <option value="Femenino">Femenino</option>
         </select>
