--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -71,7 +71,7 @@
                 height="25"
                 alt="Black and White Portrait of a Man"
                 loading="lazy"
-                *ngIf="url && user.sexo === 'Masculino'"
+                *ngIf="url && userNav.sexo === 'Masculino'"
               />        
               <img
               src="../../../assets/img/perfilM.png"
@@ -79,7 +79,7 @@
                 height="25"
                 alt="Black and White Portrait of a Man"
                 loading="lazy"
-                *ngIf="url && user.sexo === 'Femenino'"
+                *ngIf="url && userNav.sexo === 'Femenino'"
               />        
             </a>
             <ul class="dropdown-menu">
