--- a/src/app/components/my-profile/my-profile.component.html
+++ b/src/app/components/my-profile/my-profile.component.html
@@ -1,18 +1,15 @@
-<div class="container">
+
+<ng-container *ngIf="userProfile">
+  <div class="container">
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
-
-
-         
+        <div class="col-lg-4 col-md-4 col-sm-4">       
             <div class="card mt-3" style="width: 18rem;">
                 <div class="card-body">
                     <img [src]="image" class="img-fluid img-thumbnail" alt="..." id="myProfPict" *ngIf="!url"> 
-                    <img src="../../../assets/img/perfilH.png" class="img-fluid img-thumbnail" alt="..." id="myProfPict" *ngIf="url && user.sexo === 'Masculino'">
-                    <img src="../../../assets/img/perfilM.png" class="img-fluid img-thumbnail" alt="..." id="myProfPict" *ngIf="url && user.sexo === 'Femenino'">
-                     
-                    <input type="file" class="btn btn-success ms-1 w-100 mt-2" (change)="handleFileInput($event)" accept=".jpg" requiredFileType="image/png"> 
-                    
-                    <div class="file-select" id="src-file1" >
+                    <img src="../../../assets/img/perfilH.png" class="img-fluid img-thumbnail" alt="..." id="myProfPict" *ngIf="url && userProfile.sexo === 'Masculino'">
+                    <img src="../../../assets/img/perfilM.png" class="img-fluid img-thumbnail" alt="..." id="myProfPict" *ngIf="url && userProfile.sexo === 'Femenino'">
+                                          
+                    <div class="file-select mt-2" id="src-file1" >
                       <input type="file" name="src-file1" aria-label="Archivo" class="btn btn-success ms-1 w-100 mt-2" (change)="handleFileInput($event)" accept=".jpg" requiredFileType="image/png">
                     </div>
                 </div>
@@ -20,13 +17,13 @@
 
               <div class="card mt-1" style="width: 18rem;">
                 <div class="card-body">
-                  <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-user"></i>&nbsp;Username: {{user.username}}</h1> 
+                  <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-user"></i>&nbsp;Username: {{userProfile.username}}</h1> 
                 <hr>  
-                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-envelope"></i> &nbsp;{{user.email}}</h1> 
+                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-envelope"></i> &nbsp;{{userProfile.email}}</h1> 
                 <hr> 
-                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-venus-mars"></i> &nbsp;Gender: {{user.sexo}}</h1> 
+                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-venus-mars"></i> &nbsp;Gender: {{userProfile.sexo}}</h1> 
                 <hr> 
-                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-person-cane"></i>&nbsp;Edad: {{user.edad}}</h1> 
+                <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-person-cane"></i>&nbsp;Edad: {{userProfile.edad}}</h1> 
                 <hr>      
                     <h1 class="card-title" style="font-weight: 900; color: blue;"><i class="fa-solid fa-eye"></i>&nbsp; Followers 450</h1> 
                     <hr>  
@@ -72,6 +69,10 @@
         </div>
     </div>
 </div>
+</ng-container>
+
+
+
 
 
                           
