--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
     <div class="container-fluid container">
-        <a class="navbar-brand mt-2 mt-lg-0" [routerLink]="['']">
+        <a class="navbar-brand mt-2 mt-lg-0" [routerLink]="['/home']">
             <img
               src="../../../assets/img/logo.png"
               height="50"
@@ -83,7 +83,7 @@
               />        
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" [routerLink]="['myprofile']">
+              <li><a class="dropdown-item" [routerLink]="['/myprofile']" style="cursor: pointer;">
                 <i class="fa-solid fa-user"></i> &nbsp; Profile
               </a></li>
               <li><a class="dropdown-item" href="#">
