--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -33,6 +33,7 @@
                             [src]="image"
                             class="rounded-circle mb-2"
                             height="50"
+                            width="50"
                             alt="Black and White Portrait of a Man"
                             loading="lazy"
                             *ngIf="!url"
@@ -42,6 +43,7 @@
                             src="../../../assets/img/perfilH.png"
                             class="rounded-circle mb-2"
                             height="50"
+                            width="50"
                             alt="Black and White Portrait of a Man"
                             loading="lazy"
                             *ngIf="url && userHome.sexo === 'Masculino'"
@@ -51,6 +53,7 @@
                             src="../../../assets/img/perfilM.png"
                             class="rounded-circle mb-2"
                             height="50"
+                            width="50"
                             alt="Black and White Portrait of a Man"
                             loading="lazy"
                             *ngIf="url && userHome.sexo === 'Femenino'"
